# cargo-watch

./: .editorconfig  .gitignore  .package  .travis.yml  CARETAKERS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAN.md  README.md  TROUBLESHOOT.md  USAGE.md  appveyor.yml  build.rs  cargo-watch-manifest.rc  cargo-watch.1  cargo-watch.1.ronn  cargo-watch.exe.manifest
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  check.yml  release.pub  release.yml
completions/: _cargo-watch.ps1  _cargo-watch.zsh  cargo-watch.bash  cargo-watch.elv  cargo-watch.fig.ts  cargo-watch.fish  zsh
examples/: completions.rs  test-cw.rs
src/: args.rs  cargo.rs  compile.rs  config.rs  filter.rs  ignore.rs  lib.rs  main.rs  options.rs  root.rs  schedule.rs  timelock.rs  watch.rs  watcher.rs
src/config/: init.rs  origin.rs  runtime.rs
tests/: cli_tests.rs  echo.rs  exec.rs
tests/snapshots/: echo__with_announce.stderr.snap  echo__with_announce.stdout.snap  echo__with_error.stderr.snap  echo__with_error.stdout.snap  echo__without_announce.stderr.snap  echo__without_announce.stdout.snap  echo__without_watch.stderr.snap  echo__without_watch.stdout.snap
tests/trycmd/: singles.trycmd
tests/trycmd/unix/: basics.trycmd  no-cargo.trycmd  restart.trycmd
