[package]
name = "cargo-watch"
version = "8.1.2"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Watch your Cargo-based project and run commands when files change"
keywords = ["cargo", "watch", "compile", "notify"]
categories = ["command-line-utilities", "development-tools"]

homepage = "https://watchexec.github.io/#cargo-watch"
documentation = "https://github.com/watchexec/cargo-watch#readme"
repository = "https://github.com/watchexec/cargo-watch"
readme = "README.md"

edition = "2021"
resolver = "2"
rust-version = "1.58.0"

include = ["src", "examples", "tests", "build.rs", "/*manifest*", "README.md"]

[[bin]]
name = "cargo-watch"

[dependencies]
argfile = "0.1.3"
clap = { version = "3.0.10", features = ["derive"] }
console-subscriber = { version = "0.1.0", optional = true }
dunce = "1.0.2"
futures = "0.3.17"
miette = { version = "4.7.1", features = ["fancy-no-backtrace"] }
shlex = "1.1.0"
tracing = "0.1.26"
watchexec = "2.0.0-pre.6"
wild = "2.0.4"

[dependencies.tokio]
version = "1.15.0"
features = [
	"fs",
	"io-std",
	"parking_lot",
	"process",
	"rt",
	"rt-multi-thread",
	"signal",
	"sync",
]

[dependencies.tracing-subscriber]
version = "0.3.6"
features = [
	"env-filter",
	"fmt",
]

[target.'cfg(any(windows, target_env = "musl"))'.dependencies]
mimalloc = "0.1.26"

[target.'cfg(not(target_os="freebsd"))'.dependencies]
notify-rust = "4.5.2"

[build-dependencies]
embed-resource = "1.6.1"

[dev-dependencies]
assert_cmd = "1.0.1"
clap_complete = "3.0.4"
clap_complete_fig = "3.0.2"
insta = "1.7.1"
predicates = "2.0.0"
wait-timeout = "0.2.0"

[dev-dependencies.clap]
version = "3.0.10"
features = [
	"derive",
]

[features]
dev-console = ["console-subscriber"]

[profile.release]
debug = 1 # for stack traces
lto = "fat"
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.xz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"

[package.metadata.deb]
maintainer = "Félix Saparelli <felix@passcod.name>"
license-file = ["LICENSE", "0"]
section = "devel"
# conf-files = [] # look me up when config file lands
assets = [
	["target/release/cargo-watch", "usr/bin/cargo-watch", "755"],
	["README.md", "usr/share/doc/cargo-watch/README", "644"],
	["USAGE.md", "usr/share/doc/cargo-watch/USAGE", "644"],
	["TROUBLESHOOT.md", "usr/share/doc/cargo-watch/TROUBLESHOOT", "644"],
	["cargo-watch.1", "usr/share/man/man1/cargo-watch.1", "644"],
	["logo.svg", "usr/share/icons/hicolor/scalable/apps/cargo-watch.svg", "644"],
	["completions/cargo-watch.bash", "usr/share/bash-completion/completions/cargo-watch", "644"],
	["completions/cargo-watch.elv", "usr/share/elvish/lib/cargo-watch.elv", "644"],
	["completions/cargo-watch.fish", "usr/share/fish/completions/cargo-watch.fish", "644"],
	["completions/_cargo-watch.zsh", "usr/share/zsh/site-functions/_cargo-watch", "644"],
]

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/cargo-watch", dest = "/usr/bin/cargo-watch", mode = "755" },
	{ source = "README.md", dest = "/usr/share/doc/cargo-watch/README", mode = "644", doc = true },
	{ source = "USAGE.md", dest = "/usr/share/doc/cargo-watch/USAGE", mode = "644", doc = true },
	{ source = "TROUBLESHOOT.md", dest = "/usr/share/doc/cargo-watch/TROUBLESHOOT", mode = "644", doc = true },
	{ source = "cargo-watch.1", dest = "/usr/share/man/man1/cargo-watch.1.html", mode = "644" },
	{ source = "logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/cargo-watch.svg", mode = "644" },
	{ source = "completions/cargo-watch.bash", dest = "usr/share/bash-completion/completions/cargo-watch", mode = "644" },
	{ source = "completions/cargo-watch.elv", dest = "/usr/share/elvish/lib/cargo-watch.elv", mode = "644" },
	{ source = "completions/cargo-watch.fish", dest = "/usr/share/fish/completions/cargo-watch.fish", mode = "644" },
	{ source = "completions/_cargo-watch.zsh", dest = "/usr/share/zsh/site-functions/_cargo-watch", mode = "644" },
	# set conf = true for config file when that lands
]
