[package]
name = "cargo-watch"
version = "8.3.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "CC0-1.0"
description = "Watches over your Cargo project’s source"
keywords = ["cargo", "watch", "compile", "notify"]
categories = ["command-line-utilities", "development-tools"]

documentation = "https://watchexec.github.io/docs/#cargo-watch"
homepage = "https://watchexec.github.io/#cargo-watch"
repository = "https://github.com/watchexec/cargo-watch"
readme = "README.md"

edition = "2021"
rust-version = "1.60.0"
exclude = ["/.github"]

[[bin]]
name = "cargo-watch"

[dependencies]
camino = "1.1.2"
cargo_metadata = "0.15.2"
clap = "2.33.1"
dotenvy = "0.15.6"
log = "0.4.17"
notify-rust = "4.7.0"
shell-escape = "0.1.5"
stderrlog = "0.5.4"
watchexec = "1.17.1"

[dev-dependencies]
assert_cmd = "1.0.1"
insta = "1.26.0"
predicates = "2.1.5"
wait-timeout = "0.2.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[package.metadata.binstall]
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ format }"

[package.metadata.deb]
maintainer = "Félix Saparelli <felix@passcod.name>"
license-file = ["LICENSE", "0"]
section = "devel"
# conf-files = [] # look me up when config file lands
assets = [
  ["target/release/cargo-watch", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/cargo-watch/README", "644"],
  ["cargo-watch.1", "usr/share/man/man1/cargo-watch.1", "644"],
  ["logo.svg", "usr/share/icons/hicolor/scalable/apps/cargo-watch.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/cargo-watch", dest = "/usr/bin/", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/cargo-watch/README", mode = "644", doc = true },
  { source = "cargo-watch.1", dest = "/usr/share/man/man1/cargo-watch.1.html", mode = "644" },
  { source = "logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/cargo-watch.svg", mode = "644" },
  # set conf = true for config file when that lands
]
